globus-gridftp-server (12.8-1+gt6.@distro@) @distro@; urgency=low

  * fix daemon config parsing not catching env vars

 -- Globus Toolkit <support@globus.org>  Mon, 16 Jul 2018 16:22:05 -0500

globus-gridftp-server (12.7-1+gt6.@distro@) @distro@; urgency=low

  * force ipc encryption if server configuration requires
  * fix old ipc bug making it hard to diagnose racy connection failures

 -- Globus Toolkit <support@globus.org>  Fri, 13 Jul 2018 16:16:09 -0500

globus-gridftp-server (12.6-1+gt6.@distro@) @distro@; urgency=low

  * win: fix path restrictions on /

 -- Globus Toolkit <support@globus.org>  Fri, 15 Jun 2018 15:27:56 -0500

globus-gridftp-server (12.5-1+gt6.@distro@) @distro@; urgency=low

  * win32 fix

 -- Globus Toolkit <support@globus.org>  Wed, 07 Feb 2018 00:23:59 -0600

globus-gridftp-server (12.4-1+gt6.@distro@) @distro@; urgency=low

  * Improve search for user env in enable-sshftp script

 -- Globus Toolkit <support@globus.org>  Wed, 08 Nov 2017 09:55:26 -0500

globus-gridftp-server (12.3-1+gt6.@distro@) @distro@; urgency=low

  * preloaded module typo fix

 -- Globus Toolkit <support@globus.org>  Mon, 25 Sep 2017 15:22:46 -0500

globus-gridftp-server (12.2-1+gt6.@distro@) @distro@; urgency=low

  * Fix tests when getgroups() does not return effective gid

 -- Globus Toolkit <support@globus.org>  Tue, 20 Jun 2017 12:35:22 -0400

globus-gridftp-server (12.1-1+gt6.@distro@) @distro@; urgency=low

  * better delay for end of session ref check

 -- Globus Toolkit <support@globus.org>  Tue, 18 Apr 2017 11:04:29 -0500

globus-gridftp-server (12.0-1+gt6.@distro@) @distro@; urgency=low

  * Fix MDTM/UTIME on windows
  * New error message format
  * Configuration database

 -- Globus Toolkit <support@globus.org>  Mon, 10 Apr 2017 11:41:34 -0400

globus-gridftp-server (11.8-1+gt6.@distro@) @distro@; urgency=low

  * better MFMT fix for windows directories.  prior fix resulted in MDTM not matching MFMT depending on DST.
